# Minids

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  index.html  params.json
exampleProgram/: Makefile.am  Makefile.in  exampleProgram.c
include/: Makefile.am  Makefile.in  stack_int.h
libminids/: Makefile.am  Makefile.in  stack_int.c
